--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "lucide-react": "^0.344.0",
     "node-fetch": "^3.3.2",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.2",
